; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_color_utils.c_hsv2grbw.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_color_utils.c_hsv2grbw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hsv2grbw(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @hsv2grb(i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = and i32 %17, 16711680
  %19 = ashr i32 %18, 16
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %7, align 4
  %21 = and i32 %20, 65280
  %22 = ashr i32 %21, 8
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %7, align 4
  %24 = and i32 %23, 255
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @min3(i32 %25, i32 %26, i32 %27)
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %11, align 4
  %31 = sub nsw i32 %29, %30
  store i32 %31, i32* %8, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %11, align 4
  %34 = sub nsw i32 %32, %33
  store i32 %34, i32* %9, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %11, align 4
  %37 = sub nsw i32 %35, %36
  store i32 %37, i32* %10, align 4
  %38 = load i32, i32* %8, align 4
  %39 = shl i32 %38, 24
  %40 = load i32, i32* %9, align 4
  %41 = shl i32 %40, 16
  %42 = or i32 %39, %41
  %43 = load i32, i32* %10, align 4
  %44 = shl i32 %43, 8
  %45 = or i32 %42, %44
  %46 = load i32, i32* %11, align 4
  %47 = or i32 %45, %46
  store i32 %47, i32* %12, align 4
  %48 = load i32, i32* %12, align 4
  ret i32 %48
}

declare dso_local i32 @hsv2grb(i32, i32, i32) #1

declare dso_local i32 @min3(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
